unpackaged/main/default/objects/Opportunity/fields/Demo_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field_1__c</fullName>
    <description>Demo field created for Gearset demonstration and documentation.</description>
    <label>Demo Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>