unpackaged/main/default/objects/Opportunity/fields/Demo_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field_2__c</fullName>
    <description>Second demo field for Gearset demonstration.</description>
    <label>Demo Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>