unpackaged/main/default/objects/Opportunity/fields/Demo_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field_3__c</fullName>
    <description>This is a demo field created for Gearset testing and demo purposes</description>
    <label>Demo Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>